# OmniScribeWeb

./: .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
accounts/: forms.py  urls.py  views.py
config/: urls.py
config/settings/: base.py
core/: apps.py  config.py  repository.py  storage.py
core/services/: __init__.py  api_status_service.py  document_service.py  embedding_service.py  factory.py  flashcard_service.py  groq_client.py  notes_service.py  quiz_service.py  rag_service.py  transcription_service.py  vector_store_service.py
lectures/: admin.py  models.py  quiz_parser.py  urls.py  views.py
lectures/migrations/: 0001_initial.py  0002_course_lecture_flashcard_audio_lecture_and_more.py  0003_backfill_courses_lectures.py
lectures/templatetags/: markdown_filters.py
scripts/: entrypoint.sh
static/css/: app.css
static/js/: app.js
templates/: base.html
templates/accounts/: login.html  register.html
templates/lectures/: audio_detail.html  audio_list.html  audio_upload.html  audio_workspace.html  chat.html  course_detail.html  dashboard.html  document_list.html  document_upload.html  documents.html  flashcards.html  notes.html  quiz.html
