[project]
name = "omniscribe-web"
version = "0.1.0"
description = "OmniScribe web MVP — Django fullstack, CPU-only AI pipelines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "chromadb>=1.5.0,<2.0",
    "django>=5.0,<6",
    "easyocr>=1.7.1",
    "gunicorn>=22.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "markdown>=3.5.0",
    "minio>=7.2.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "psycopg2-binary>=2.9.9",
    "pymupdf>=1.24.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "sentence-transformers>=2.2.2,<3",
    "torch>=2.2.0,<3",
    "torchvision>=0.17.0,<1",
    "whitenoise>=6.6.0",
]

# CPU-only PyTorch wheels (no CUDA)
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[tool.uv]
# Block accidental NVIDIA/CUDA transitive installs
override-dependencies = [
    "nvidia-cublas-cu12; sys_platform == 'never'",
    "nvidia-cuda-cupti-cu12; sys_platform == 'never'",
    "nvidia-cuda-nvrtc-cu12; sys_platform == 'never'",
    "nvidia-cuda-runtime-cu12; sys_platform == 'never'",
    "nvidia-cudnn-cu12; sys_platform == 'never'",
    "nvidia-cufft-cu12; sys_platform == 'never'",
    "nvidia-cufile-cu12; sys_platform == 'never'",
    "nvidia-curand-cu12; sys_platform == 'never'",
    "nvidia-cusolver-cu12; sys_platform == 'never'",
    "nvidia-cusparse-cu12; sys_platform == 'never'",
    "nvidia-cusparselt-cu12; sys_platform == 'never'",
    "nvidia-nccl-cu12; sys_platform == 'never'",
    "nvidia-nvjitlink-cu12; sys_platform == 'never'",
    "nvidia-nvshmem-cu12; sys_platform == 'never'",
    "nvidia-cublas-cu13; sys_platform == 'never'",
    "nvidia-cuda-cupti-cu13; sys_platform == 'never'",
    "nvidia-cuda-nvrtc-cu13; sys_platform == 'never'",
    "nvidia-cuda-runtime-cu13; sys_platform == 'never'",
    "nvidia-cudnn-cu13; sys_platform == 'never'",
    "nvidia-cufft-cu13; sys_platform == 'never'",
    "nvidia-cufile-cu13; sys_platform == 'never'",
    "nvidia-curand-cu13; sys_platform == 'never'",
    "nvidia-cusolver-cu13; sys_platform == 'never'",
    "nvidia-cusparse-cu13; sys_platform == 'never'",
    "nvidia-cusparselt-cu13; sys_platform == 'never'",
    "nvidia-nccl-cu13; sys_platform == 'never'",
    "nvidia-nvjitlink-cu13; sys_platform == 'never'",
    "nvidia-nvshmem-cu13; sys_platform == 'never'",
    "triton; sys_platform == 'never'",
]
